--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: myUtilBox
-Title: What the Package Does (One Line, Title Case)
+Title: Personal Utility Functions
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Ben",
+           family = "Wang",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "benjaminwang89@gmail.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: It contains some handy utility functions for personal use. 
 License: What license it uses
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.0.2
+Imports: 
+    rjson
